# antioxidant-fallback

./: .guix-authorizations  .guix-channel  .news  0001-Port-src-parsers.rs-to-nom-7.patch  0001-Update-to-new-GTK-version-and-new-version-of-depende.patch  0001-use-std-time-bump-to-0.5.4.patch  DOCUMENTATION  LICENSE  Makefile  README.md  antioxidant-ci.scm  antioxidant-packages.scm  antioxidant.scm  drill-update-dependencies.patch  guix.scm  report  rust-cbindgen-0.19-antioxidant-compatibility.patch  rust-hmac-sha1-update-dependencies.patch  rust-itoa-Reintroduce-fmt.patch  rust-libnghttp2-unbundle.patch  rust-meval-update-dependencies.patch  rust-newtype-derive-Update-dependencies.patch  rust-polars-core-Update-rand.patch  rust-proptest-derive-upgrade-to-stable-proc-macro-ecosyst.patch  rust-semver-Add-increment-foo-again.patch  rust-watchexec-nix-compatibility.patch  rust-winit-Update-smithay-client-toolkit.patch  warp-Update-tokio-rustls-to-v0.23.patch  warp-Update-tungstenite-to-0.17.2.patch
hello-app/: main.rs
libhello/: hello.rs
shared-lib/: Cargo.toml  example.c  lib.rs
